[gd_scene load_steps=8 format=3 uid="uid://b0vn0c2ckxsjs"]

[ext_resource type="Script" path="res://Ingame/game_objects/_abstract/room.gd" id="1_6dtbh"]
[ext_resource type="PackedScene" uid="uid://iyjbmvwu3mln" path="res://Ingame/game_objects/room/room_area/room_area.tscn" id="2_d5o5w"]
[ext_resource type="TileSet" uid="uid://dcreykohtx3s6" path="res://Ingame/levels/level_tilesets/ground_tiles.tres" id="3_7iwce"]
[ext_resource type="PackedScene" uid="uid://djaquspk2nph0" path="res://Ingame/game_objects/spawner/enemy_spawner/enemy_spawner.tscn" id="5_6hfr1"]
[ext_resource type="PackedScene" uid="uid://dt5tsxpcpmftw" path="res://Ingame/game_objects/room/room_content/room_content.tscn" id="5_othvg"]
[ext_resource type="PackedScene" uid="uid://d0t83wkvk5d6l" path="res://Ingame/game_objects/room/autoadvance_area/autoadvance_area.tscn" id="7_kjeg2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ebpdk"]
size = Vector2(1424, 712)

[node name="room_003" type="Node2D"]
script = ExtResource("1_6dtbh")
ost_item = 1

[node name="room_area" parent="." instance=ExtResource("2_d5o5w")]
position = Vector2(64, 288)

[node name="CollisionShape2D" type="CollisionShape2D" parent="room_area"]
position = Vector2(-64, -292)
shape = SubResource("RectangleShape2D_ebpdk")
debug_color = Color(0.415686, 0.552941, 0.662745, 0.419608)

[node name="CollisionTileMap" type="TileMap" parent="."]
texture_filter = 1
position = Vector2(32, 320)
tile_set = ExtResource("3_7iwce")
cell_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(-21, 196610, 4, -65557, 196610, 2, -131093, 196610, 2, -196629, 196610, 4, -262165, 196610, 4, -327701, 196610, 4, -393237, 196610, 2, -458773, 196610, 4, -524309, 262146, 3, -589845, 196610, 4, -589844, 327682, 3, -524308, 262146, 2, -524310, 196610, 3, -589846, 196610, 4, -655382, 196610, 1, -655381, 196610, 1, -655380, 327682, 2, -458772, 196610, 4, -458774, 196610, 4, -393236, 196610, 2, -393238, 262146, 3, -327700, 131074, 3, -327702, 196610, 2, -262164, 196610, 3, -262166, 196610, 3, -196628, 196610, 2, -196630, 196610, 4, -131092, 196610, 3, -131094, 196610, 4, -65556, 262146, 3, -65558, 196610, 2, -20, 196610, 4, -22, 131074, 3, -19, 196610, 4, -18, 196610, 4, -17, 262146, 3, -16, 196610, 3, -15, 131074, 3, -14, 262146, 3, -13, 262146, 3, -12, 262146, 2, -11, 196610, 1, -10, 196610, 1, -9, 196610, 1, -8, 196610, 1, -7, 196610, 1, -6, 196610, 1, -5, 196610, 1, -4, 196610, 1, -3, 196610, 1, -2, 196610, 1, -1, 196610, 1, -65536, 196610, 1, -65535, 196610, 1, -65534, 196610, 1, -65533, 196610, 1, -65532, 196610, 1, -65531, 196610, 1, -65530, 196610, 1, -65529, 196610, 1, -65528, 196610, 1, -65527, 196610, 1, -65526, 196610, 1, -65525, 196610, 1, -65524, 196610, 1, -65523, 196610, 1, -65522, 196610, 1, -65521, 196610, 1, -65520, 196610, 1, -65519, 196610, 1, -65518, 196610, 1, -65517, 196610, 1, -65549, 131074, 3, -65548, 327682, 3, -65550, 196610, 2, -131086, 262146, 2, -131085, 196610, 1, -131084, 262146, 1, -65551, 131074, 3, -131087, 196610, 2, -65552, 196610, 2, -131088, 131074, 3, -196624, 196610, 2, -196623, 196610, 3, -196622, 327682, 3, -262160, 262146, 2, -262159, 196610, 1, -262158, 327682, 2, -131089, 196610, 4, -196625, 262146, 3, -262161, 131074, 3, -327697, 196610, 3, -327696, 327682, 3, -262162, 196610, 4, -327698, 262146, 3, -393234, 262146, 2, -393233, 196610, 1, -393232, 327682, 2, -196626, 196610, 2, -131090, 131074, 3, -65553, 196610, 4, -65554, 196610, 2, -65555, 196610, 2, -131091, 262146, 3, -196627, 131074, 3, -262163, 262146, 3, -327699, 196610, 3, -393235, 196610, 2, -458771, 196610, 2, -458770, 327682, 3, -524307, 196610, 1, -524306, 262146, 1, -1376246, 327682, 3, -1376247, 196610, 4, -1376248, 196610, 2, -1376249, 131074, 3, -1376250, 196610, 3, -1376251, 196610, 4, -1376252, 196610, 2, -1376253, 196610, 2, -1376254, 196610, 3, -1376255, 196610, 4, -1376256, 131074, 3, -1310721, 262146, 3, -1310722, 196610, 3, -1310723, 262146, 3, -1310724, 196610, 3, -1310725, 131074, 3, -1310726, 196610, 3, -1310727, 262146, 3, -1310728, 262146, 3, -1310729, 131074, 3, -1310730, 196610, 2, -1310731, 262146, 3, -1310732, 196610, 4, -1310733, 262146, 3, -1310734, 262146, 3, -1310735, 262146, 3, -1310736, 262146, 3, -1310737, 262146, 3, -1310738, 131074, 3, -1310739, 196610, 2, -1310740, 262146, 3, -1310741, 196610, 4, -1310742, 131074, 3, -458733, 196610, 4, -524269, 131074, 3, -589805, 196610, 2, -655341, 196610, 3, -720877, 196610, 4, -786413, 196610, 3, -851949, 196610, 3, -917485, 262146, 3, -983021, 196610, 4, -1048557, 131074, 3, -1114093, 131074, 3, -1179629, 131074, 3, -1245165, 262146, 3, -1310701, 196610, 4, -1376237, 196610, 4, -1376236, 196610, 3, -1376238, 196610, 4, -1310700, 196610, 3, -1310702, 196610, 3, -1245164, 196610, 3, -1245166, 131074, 3, -1179628, 196610, 3, -1179630, 196610, 2, -1114092, 196610, 3, -1114094, 196610, 4, -1048556, 196610, 3, -1048558, 262146, 3, -983020, 196610, 3, -983022, 196610, 2, -917484, 196610, 3, -917486, 262146, 3, -851948, 196610, 3, -851950, 196610, 3, -786412, 196610, 3, -786414, 131074, 3, -720876, 196610, 3, -720878, 131074, 3, -655340, 196610, 3, -655342, 262146, 3, -589804, 196610, 3, -589806, 196610, 2, -524268, 196610, 3, -524270, 196610, 4, -458732, 196610, 3, -458734, 262146, 3, -393196, 196610, 5, -393197, 196610, 5, -393198, 196610, 5, -458735, 131074, 3, -524271, 196610, 2, -589807, 131074, 3, -655343, 196610, 4, -720879, 196610, 3, -786415, 262146, 3, -851951, 196610, 2, -917487, 131074, 3, -983023, 196610, 4, -1048559, 196610, 3, -1114095, 196610, 2, -1179631, 262146, 3, -1245167, 262146, 3, -1310703, 262146, 3, -1376239, 131074, 3, -1310704, 65538, 3, -1376240, 65538, 3, -1245168, 65538, 3, -1179632, 65538, 3, -1114096, 65538, 3, -1048560, 65538, 3, -983024, 65538, 3, -917488, 65538, 3, -851952, 65538, 3, -786416, 65538, 3, -720880, 65538, 3, -655344, 65538, 3, -589808, 65538, 3, -524272, 65538, 3, -458736, 65538, 3, -393199, 196610, 5, -393200, 131074, 5, -1245206, 196610, 4, -1245205, 196610, 4, -1245204, 196610, 3, -1245203, 262146, 3, -1245202, 131074, 3, -1245201, 196610, 2, -1245200, 196610, 2, -1245199, 196610, 3, -1245198, 196610, 4, -1245197, 196610, 2, -1245196, 131074, 3, -1245195, 196610, 3, -1245194, 131074, 3, -1245193, 196610, 4, -1245192, 262146, 3, -1245191, 196610, 3, -1245190, 262146, 3, -1245189, 262146, 3, -1245188, 196610, 3, -1245187, 196610, 3, -1245186, 196610, 4, -1245185, 262146, 3, -1310720, 196610, 3, -1310719, 196610, 4, -1310718, 196610, 3, -1310717, 262146, 3, -1310716, 262146, 3, -1310715, 262146, 3, -1310714, 196610, 3, -1310713, 131074, 3, -1310712, 131074, 3, -1310711, 262146, 3, -1310710, 327682, 3, -1245174, 327682, 4, -1245175, 196610, 5, -1245176, 196610, 5, -1245177, 196610, 5, -1245178, 196610, 5, -1245179, 196610, 5, -1245180, 196610, 5, -1245181, 196610, 5, -1245182, 196610, 5, -1245183, 196610, 5, -1245184, 196610, 5, -1179649, 196610, 5, -1179650, 196610, 5, -1179651, 196610, 5, -1179652, 196610, 5, -1179653, 196610, 5, -1179654, 196610, 5, -1179655, 196610, 5, -1179656, 196610, 5, -1179657, 196610, 5, -1179658, 196610, 5, -1179659, 196610, 5, -1179660, 196610, 5, -1179661, 196610, 5, -1179662, 196610, 5, -1179663, 196610, 5, -1179664, 196610, 5, -1179665, 196610, 5, -1179666, 196610, 5, -1179667, 196610, 5, -1179668, 262146, 4, -1179669, 131074, 3, -1179670, 196610, 2, -1179671, 196610, 3, -1245207, 196610, 3, -1310743, 196610, 3, -23, 196610, 3, -65559, 196610, 3, -131095, 196610, 3, -196631, 196610, 3, -262167, 196610, 3, -327703, 196610, 3, -393239, 196610, 3, -458775, 196610, 3, -524311, 196610, 3, -589847, 196610, 3, -655383, 196610, 1, -1114133, 131074, 3, -1114134, 262146, 3, -1114135, 196610, 3, -1048598, 196610, 4, -1048599, 131074, 3, -1048597, 196610, 2, -1114132, 327682, 3, -1048596, 327682, 3, -983060, 327682, 4, -983061, 196610, 5, -983062, 196610, 5, -983063, 196610, 5, -65516, 196610, 1, 65513, 196610, 3, 131049, 196610, 3, 65514, 196610, 3, 131050, 196610, 3, 65515, 196610, 3, 131051, 196610, 3, 65516, 196610, 3, 131052, 196610, 3, 65517, 196610, 3, 131053, 196610, 3, 65518, 196610, 3, 131054, 196610, 3, 65519, 196610, 3, 131055, 196610, 3, 65520, 196610, 3, 131056, 196610, 3, 65521, 196610, 3, 131057, 196610, 3, 65522, 196610, 3, 131058, 196610, 3, 65523, 196610, 3, 131059, 196610, 3, 65524, 196610, 3, 131060, 196610, 3, 65525, 196610, 3, 131061, 196610, 3, 65526, 196610, 3, 131062, 196610, 3, 65527, 196610, 3, 131063, 196610, 3, 65528, 196610, 3, 131064, 196610, 3, 65529, 196610, 3, 131065, 196610, 3, 65530, 196610, 3, 131066, 196610, 3, 65531, 196610, 3, 131067, 196610, 3, 65532, 196610, 3, 131068, 196610, 3, 65533, 196610, 3, 131069, 196610, 3, 65534, 196610, 3, 131070, 196610, 3, 65535, 196610, 3, 131071, 196610, 3, 0, 196610, 3, 65536, 196610, 3, 1, 196610, 3, 65537, 196610, 3, 2, 196610, 3, 65538, 196610, 3, 3, 196610, 3, 65539, 196610, 3, 4, 196610, 3, 65540, 196610, 3, 5, 196610, 3, 65541, 196610, 3, 6, 196610, 3, 65542, 196610, 3, 7, 196610, 3, 65543, 196610, 3, 8, 196610, 3, 65544, 196610, 3, 9, 196610, 3, 65545, 196610, 3, 10, 196610, 3, 65546, 196610, 3, 11, 196610, 3, 65547, 196610, 3, 12, 196610, 3, 65548, 196610, 3, 13, 196610, 3, 65549, 196610, 3, 14, 196610, 3, 65550, 196610, 3, 15, 196610, 3, 65551, 196610, 3, 16, 196610, 3, 65552, 196610, 3, 17, 196610, 3, 65553, 196610, 3, 18, 196610, 3, 65554, 196610, 3, 19, 196610, 3, 65555, 196610, 3, 20, 196610, 3, 65556, 196610, 3, -262134, 65538, 9, -262133, 131074, 9, -458738, 65538, 9, -458737, 131074, 9, -655350, 65538, 9, -655349, 131074, 9, -851954, 65538, 9, -851953, 131074, 9, -1048566, 65538, 9, -1048565, 131074, 9)

[node name="room_content" parent="." instance=ExtResource("5_othvg")]

[node name="enemy_spawner" parent="room_content" instance=ExtResource("5_6hfr1")]
position = Vector2(40, 288)

[node name="autoadvance_area" parent="room_content" instance=ExtResource("7_kjeg2")]
position = Vector2(-704, -96)
direction = 3

[node name="autoadvance_area2" parent="room_content" instance=ExtResource("7_kjeg2")]
position = Vector2(464, -352)
collider_size = Vector2i(5, 4)
direction = 0

[node name="autoadvance_area4" parent="room_content" instance=ExtResource("7_kjeg2")]
position = Vector2(704, 224)
